--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "cross-env NODE_ENV=testing jest --watch",
+    "prestart": "npx knex migrate:latest",
     "start": "node index.js",
     "server": "nodemon",
     "coverage": "jest --coverage --detectOpenHandles --forceExit || true"
@@ -16,21 +17,23 @@
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "helmet": "^3.21.3",
+    "helmet": "^3.22.0",
     "jsonwebtoken": "^8.5.1",
-    "knex": "^0.20.11",
+    "knex": "^0.20.13",
     "knex-cleaner": "^1.3.0",
     "lodash": "^4.17.15",
-    "morgan": "^1.9.1",
+    "moment-timezone": "^0.5.28",
+    "morgan": "^1.10.0",
     "node-sass": "^4.13.1",
-    "pg": "^7.18.2",
+    "node-schedule": "^1.3.2",
+    "pg": "^8.0.0",
     "query-string": "^6.11.1",
     "twit": "^2.2.11",
     "twitter-lite": "^0.9.4"
   },
   "devDependencies": {
     "cross-env": "^7.0.2",
-    "jest": "^25.1.0",
+    "jest": "^25.2.4",
     "nodemon": "^2.0.2",
     "supertest": "^4.0.2"
   },
